sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/Leave_Entitlement_Type_Config__c.object-meta.xml
<CustomObject>
    <label>Leave Entitlement Type Config</label>
    <nameField>
        <displayFormat>LET-{00000000}</displayFormat>
        <label>Leave Entitlement Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Entitlement Type Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>