sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Accrue__c.field-meta.xml
<CustomField>
    <fullName>Accrue__c</fullName>
    <description>Is the Leave Type accrued at beginning of the month or at the end of the month ?</description>
    <inlineHelpText>Is the Leave Type accrued at beginning of the month or at the end of the month ?</inlineHelpText>
    <label>Accrue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start Month</fullName>
            </value>
            <value>
                <fullName>End Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>