sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Days_Accrued_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_Accrued_Per_Month__c</fullName>
    <formula>IF( ISPICKVAL( Leave_Type__c , &#39;Annual Leave&#39;) , (Total_No_of_Leave_Days__c / 12) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Accrued Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>