sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Display_to_User__c.field-meta.xml
<CustomField>
    <fullName>Display_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box so that to show this config to the drop down for the user to select when creating leave</description>
    <label>Display to User</label>
    <type>Checkbox</type>
</CustomField>