sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Leave_Group__c.field-meta.xml
<CustomField>
    <fullName>Leave_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Group</label>
    <referenceTo>Leave_Group__c</referenceTo>
    <relationshipLabel>Leave Entitlement Type Configs</relationshipLabel>
    <relationshipName>Leave_Entitlement_Type_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>