sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Leave_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Name__c</fullName>
    <formula>IF(ISPICKVAL(Leave_Type__c, &#39;Annual Leave&#39;),&#39;Annual Leave &#39;&amp; &#39;&#39; &amp; TEXT(Year__c), IF(ISPICKVAL(Leave_Type__c, &#39;Sick Leave&#39;),&#39;Sick Leave &#39;&amp;&#39;&#39; &amp; TEXT(Year__c), IF(ISPICKVAL(Leave_Type__c, &#39;Maternity Leave&#39;),&#39;Maternity Leave &#39;&amp;&#39;&#39;&amp; TEXT(Year__c), IF(ISPICKVAL(Leave_Type__c, &#39;Paternity Leave&#39;),&#39;Paternity Leave &#39; &amp; &#39;&#39; &amp; TEXT(Year__c),IF(ISPICKVAL(Leave_Type__c, &#39;Exam Leave&#39;),&#39;Exam Leave &#39;&amp; &#39;&#39; &amp; TEXT(Year__c),IF(ISPICKVAL(Leave_Type__c, &#39;Compassionate Leave&#39;),&#39;Compassionate Leave &#39; &amp;&#39;&#39;&amp; TEXT(Year__c), null ) ) ))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Name</label>
    <type>Text</type>
</CustomField>