sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Exam Leave</fullName>
            </value>
            <value>
                <fullName>Compassionate Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>