sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Proratable__c.field-meta.xml
<CustomField>
    <fullName>Proratable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Leave Type proratable ?</description>
    <inlineHelpText>Is the Leave Type proratable ?</inlineHelpText>
    <label>Proratable</label>
    <type>Checkbox</type>
</CustomField>