sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/fields/Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Date__c</fullName>
    <label>Year End Date</label>
    <type>Date</type>
</CustomField>