sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Type_Config__c/listViews/HR_Admin_Leave_Entitlement_Type_Config.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Leave_Entitlement_Type_Config</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>